tests/expectations/compiler/records/same_name_diff_type_fail.out
DCE_ENABLED:
Error [ETYC0372119]: Received different types `R` and `child.aleo/R` for the operation `==`.
    --> compiler-test:16:16
     |
  16 |         return r1 == child.aleo/create();
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Make both operands the same type.

DCE_DISABLED:
Error [ETYC0372119]: Received different types `R` and `child.aleo/R` for the operation `==`.
    --> compiler-test:16:16
     |
  16 |         return r1 == child.aleo/create();
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Make both operands the same type.
